// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OTUToolbar /> should render 1`] = `
<Toolbar>
  <SearchInput
    onChange={[Function]}
    placeholder="Name or abbreviation"
    value="foo"
  />
  <Button
    active={false}
    color="grey"
    disabled={false}
    id="verified-button"
    onClick={[Function]}
    tip="Filter Unverified"
    tipPlacement="top"
    type="button"
  >
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="filter"
    />
  </Button>
  <LinkButton
    color="blue"
    icon="plus-square"
    replace={true}
    tip="Create"
    tipPlacement="top"
    to={
      Object {
        "state": Object {
          "createOTU": true,
        },
      }
    }
  />
</Toolbar>
`;

exports[`<OTUToolbar /> should render when [verified=true] 1`] = `
<Toolbar>
  <SearchInput
    onChange={[Function]}
    placeholder="Name or abbreviation"
    value="foo"
  />
  <Button
    active={true}
    color="grey"
    disabled={false}
    id="verified-button"
    onClick={[Function]}
    tip="Filter Unverified"
    tipPlacement="top"
    type="button"
  >
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="filter"
    />
  </Button>
  <LinkButton
    color="blue"
    icon="plus-square"
    replace={true}
    tip="Create"
    tipPlacement="top"
    to={
      Object {
        "state": Object {
          "createOTU": true,
        },
      }
    }
  />
</Toolbar>
`;
